# Termicord

./: CMakeLists.txt  README.md  client.sh  http.sh  server.sh
client/: CMakeLists.txt
client/include/: types.h
client/include/utils/: input.h  requests.h  utils.h
client/include/windows/: auth.h  chat.h  home.h
client/src/: client.cpp
client/src/utils/: input.cpp  utils.cpp
client/src/windows/: auth.cpp  chat.cpp  home.cpp
databases/: servers.json  users.json
http/: CMakeLists.txt
http/include/: routing.h  types.h
http/include/database/: database.h
http/include/routes/: servers.h  users.h
http/src/: http.cpp  routing.cpp
http/src/database/: database.cpp
http/src/routes/: servers.cpp  users.cpp
server/: CMakeLists.txt
server/include/: servers.h  types.h
server/src/: server.cpp  servers.cpp
server/src/utils/: requests.cpp
